<resources>
    <string name="app_name">MyAIOT</string>
    <string name="action_settings">Settings</string>
    <string name="Titulo_Dispositivo_Local">Dispositivo Local</string>
    <string name="Titulo_Dispositivo_Remoto">Dispositivo Remoto</string>
    <string name="Titulo_Recurso_Remoto">Recurso Remoto</string>
    <string name="Valor_Potenciometro">Valor Potenciometro</string>
    <string name="Titulo_Estado"/>
</resources>
