<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.muiinf.luigarpu.myaiot.MainActivity"
    tools:showIn="@layout/activity_main">

    <!-- tres bloques -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:padding="@dimen/rellenodi"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="@dimen/rellenodi"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
android:text="@string/Titulo_Dispositivo_Local" android:id="@+id/textViewdispositivolocal" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="     " android:id="@+id/textView6" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="XXXX1111" android:id="@+id/textView10" />
    </LinearLayout>
        <LinearLayout
            android:padding="@dimen/rellenodi"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/Titulo_Dispositivo_Remoto" android:id="@+id/textViewdispositivoremoto" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text=" " android:id="@+id/textView6" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="XXXX1111" android:id="@+id/textView10" />
        </LinearLayout>
        <LinearLayout
            android:padding="@dimen/rellenodi"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/Titulo_Recurso_Remoto" android:id="@+id/textViewrecursoremoto" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="      " android:id="@+id/textView6" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="XXXX1111" android:id="@+id/textView10" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/rellenodi"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="175dp">
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_row="1"
            android:layout_column="0"
            android:id="@+id/Grafica">
        </FrameLayout>
    </LinearLayout>
        <LinearLayout
            android:padding="@dimen/rellenodi"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout

                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="LED1"
                android:id="@+id/buttonled1" />
            <Button
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="LED2"
                android:id="@+id/buttonled2" />
            <Button
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="LED3"
                android:id="@+id/buttonled3" />
            <Button
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="LED4"
                android:id="@+id/buttonled4" />
            </LinearLayout>
            <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/Valor_Potenciometro" android:id="@+id/textViewrecursoremoto" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="      " android:id="@+id/textView6" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="XXXX1111" android:id="@+id/textView10" />
            </LinearLayout>
</LinearLayout>
        <LinearLayout android:padding="@dimen/rellenodi"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="150dp">
            <LinearLayout android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Titulo_Estado"
                    android:id="@+id/textView554" />
                <ScrollView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/scrollView"
                    android:layout_gravity="center_horizontal" >
                    <TextView android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="" android:id="@+id/TextViewEstado" />
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
